<resources>
    <string name="app_name">Countries</string>
    <string name="search_for_countries">Search for Countries</string>
    <string name="ic_search">search image</string>
    <string name="countries_list_page">Select Country</string>
    <string name="selected_country_done">Done</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="country_name">Country Name</string>
    <string name="main_title">Your selected countries are here</string>
    <string name="choose_country">Choose</string>
    <string name="try_again">Try again</string>
    <string name="connection_network">Check your connection Internet!</string>
    <string name="server_error">Server Error</string>
</resources>